--- a/home/home.html
+++ b/home/home.html
@@ -30,11 +30,11 @@
         </div>
         <!--redes-->
         <div class="redes">
-            <a href=""><img class="img-redes" src="/home/imagenes/redes/whatsapp_4494470.png" alt="" srcset=""></a>
-            <a href=""><img class="img-redes" src="/home/imagenes/redes/facebook_2168281.png" alt="" srcset=""></a>
-            <a href=""><img class="img-redes" src="/home/imagenes/redes/instagram_4494468.png" alt="" srcset=""></a>
-            <a href=""><img class="img-redes" src="/home/imagenes/redes/youtube.png" alt="" srcset=""></a>
-            <a href=""><img class="img-redes" src="/home/imagenes/redes/etiqueta.png" alt="" srcset=""></a>
+            <a href=""><img class="img-redes" src="imagenes/redes/whatsapp_4494470.png" alt="" srcset=""></a>
+            <a href=""><img class="img-redes" src="imagenes/redes/facebook_2168281.png" alt="" srcset=""></a>
+            <a href=""><img class="img-redes" src="imagenes/redes/instagram_4494468.png" alt="" srcset=""></a>
+            <a href=""><img class="img-redes" src="imagenes/redes/youtube.png" alt="" srcset=""></a>
+            <a href=""><img class="img-redes" src="imagenes/redes/etiqueta.png" alt="" srcset=""></a>
             
         </div>
         <!--menu de navegacion-->
@@ -49,7 +49,7 @@
         </nav>
         <!--cuerpo de la pagina-->
         <main class="cuerpo">
-            <h1 class="h1">NUEVOS PACIFIKA</h1>
+            <h1 class="h1">NUEVOS PACIFIKA</h1>   
             <h2 class="h2">MUJERES QUE INSPIRAN</h2>
             <p>Encuentra tu inspiracion en la nueva colección pacifica, diseñada para
 mujeres fuertes y auténticas ¡Haz que tu estilo hable por ti!</p>
@@ -141,13 +141,13 @@ mujeres fuertes y auténticas ¡Haz que tu estilo hable por ti!</p>
         <div class="footer-bottom">
           <p>© 2025 PAGOS ONLINE</p>
           <div class="payment-methods">
-            <img src="/img/mastercard.png" alt="Mastercard" />
-            <img src="/img/visa.png" alt="Visa" />
-            <img src="/img/nequi.png" alt="Nequi" />
-            <img src="/img/daviplata.png" alt="Daviplata" />
-            <img src="/img/addi.png" alt="Addi" />
-            <img src="/img/pse.png" alt="pse" />
-            <img src="/img/TarjetaMefia.png" alt="el fiao pa dos quincena" />
+            <img src="img/mastercard.png" alt="Mastercard" />
+            <img src="img/visa.png" alt="Visa" />
+            <img src="img/nequi.png" alt="Nequi" />
+            <img src="img/daviplata.png" alt="Daviplata" />
+            <img src="img/addi.png" alt="Addi" />
+            <img src="img/pse.png" alt="pse" />
+            <img src="img/TarjetaMefia.png" alt="el fiao pa dos quincena" />
           </div>
         </div>
       </footer>
