--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
 
     <!-- Sección de productos -->
-    <main>
+    <main style="justify-content: left;">
       <aside class="filtro">
         <h2>Filtrar por</h2>
         <label>
@@ -47,10 +47,10 @@
           <input type="checkbox" name="category" value="Gorras" /> Gorras
         </label>
       </aside>
-
+    </main>
 
 <!--SECCION DE ARTICULOS DISPONIBLES-->
-
+    <main>
 
       <section class="productos">
         <article class="producto" onclick="openModal('Camisa Roja Deportiva', 'camisa roja.jpg', '$45.000')">
