--- a/login.html
+++ b/login.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="/style/loginStyle.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width , initial-scale=1.0">
+  <head>
+    <link rel="stylesheet" href="style/loginStyle.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width , initial-scale=1.0" />
     <title>Inicia sesion</title>
-</head>
-<body>
+  </head>
+  <body>
     <section class="login">
-    <form class="formulario">
+      <form class="formulario">
         <h2>Inicia sesion</h2>
-        <label for="correo">Correo electronico
-        <input  id="correo" type="email" class="item" placeholder="Email">
-    </label>
-        <label for="contraseña">Correo electronico
-        <input  id="contraseña" type="password" class="item" placeholder="Password">
-    </label>
-        <input type="submit" value="login" class="item submit">
-    </form>
+        <label for="correo"
+          >Correo electronico
+          <input id="correo" type="email" class="item" placeholder="Email" />
+        </label>
+        <label for="contraseña"
+          >Correo electronico
+          <input
+            id="contraseña"
+            type="password"
+            class="item"
+            placeholder="Password"
+          />
+        </label>
+        <input type="submit" value="login" class="item submit" />
+      </form>
     </section>
-</body>
+  </body>
 </html>
