--- a/carrito.html
+++ b/carrito.html
@@ -6,7 +6,7 @@
     <title>Carrito de Compras</title>
     <link rel="shortcut icon" href="img/favicon.icon" />
     <link rel="stylesheet" href="style/style.css" />
-    <link rel="stylesheet" href="/home/estilo.css">
+    <link rel="stylesheet" href="home/estilo.css">
   </head>
   <body>
     <header >
