--- a/registro.html
+++ b/registro.html
@@ -1,36 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="/style/loginStyle.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <link rel="stylesheet" href="style/loginStyle.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <section class="login">
-        <form action="" class="formulario">
-            <h2>Registro de usuario</h2>
-            <label> Nombre
-                <input class="item" type="text" name="nombre" placeholder="Nombre">
-            </label>
-            <label for=""> Email
-                <input class="item" type="email" name="" id="correo" placeholder="Email">
-            </label>
-            <label for=""> Password
-            <input class="item" type="password" name="" id="contraseña" placeholder="Password">
-            </label>
-            <label for=""> Fecha de nacimiento
-                <input class="item" type="date" name="" id="">
-            </label>
-            <label for="check"> Acepta terminos y condiciones
-                <input class="item submit" type="checkbox" name="" id="check">
-            </label>
-            <label>
-                <input class="item submit" type="submit" name="">
-            </label>
-            
-        </form>
+      <form action="" class="formulario">
+        <h2>Registro de usuario</h2>
+        <label>
+          Nombre
+          <input class="item" type="text" name="nombre" placeholder="Nombre" />
+        </label>
+        <label for="">
+          Email
+          <input
+            class="item"
+            type="email"
+            name=""
+            id="correo"
+            placeholder="Email"
+          />
+        </label>
+        <label for="">
+          Password
+          <input
+            class="item"
+            type="password"
+            name=""
+            id="contraseña"
+            placeholder="Password"
+          />
+        </label>
+        <label for="">
+          Fecha de nacimiento
+          <input class="item" type="date" name="" id="" />
+        </label>
+        <label for="check">
+          Acepta terminos y condiciones
+          <input class="item submit" type="checkbox" name="" id="check" />
+        </label>
+        <label>
+          <input class="item submit" type="submit" name="" />
+        </label>
+      </form>
     </section>
-    
-</body>
+  </body>
 </html>
